--- a/linux-lqx-rebranded-5.3/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded-5.3/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.3
-_minor=16
-_lqx=lqx3
+_minor=18
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.3.16.lqx3.r0.gfa55edf33fe7
+pkgver=5.3.18.lqx1.r0.gdc25e17fcc80
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
