--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -46,9 +46,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.4
 _minor=6
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.4.6.lqx1.r0.ga8f2cf72f480
+pkgver=5.4.6.lqx2.r0.g0410f3f728fd
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
