--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.4
-_minor=6
-_lqx=lqx3
+_minor=7
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.4.6.lqx3.r0.g5d47ee26f431
+pkgver=5.4.7.lqx1.r0.gaec2aaf8a48b
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
