--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -46,9 +46,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.4
 _minor=8
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.4.8.lqx1.r0.g0140da91198c
+pkgver=5.4.8.lqx2.r0.g50f29d77f1d2
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -309,4 +309,4 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '6a4776ecfb5b4eca5a13a171eadf4dd815b083a16c0d38f24f23139d9afa8bd4c2956fd7723ca5b4a2596886cf648e3881bdc42214f38532a011fdba985142b1')
+            '3a7f2d8cd0eeaf52297ebc7757387e9c4cec293046684d0e3effb4091915cdf474291fc8962a09387ca888f5b9dfd5510a1f994cbbeb58f10699ed09304d8af7')
