--- a/linux-lqx-rebranded/linux-lqx-tag-git/config
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.4.5-lqx1 Kernel Configuration
+# Linux/x86 5.4.8-lqx2 Kernel Configuration
 #
 
 #
@@ -387,12 +387,12 @@ CONFIG_SMT_NICE=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_MC_PRIO=y
 # CONFIG_RQ_NONE is not set
-# CONFIG_RQ_SMT is not set
+CONFIG_RQ_SMT=y
 # CONFIG_RQ_MC is not set
-CONFIG_RQ_MC_LLC=y
+# CONFIG_RQ_MC_LLC is not set
 # CONFIG_RQ_SMP is not set
 # CONFIG_RQ_ALL is not set
-CONFIG_SHARERQ=3
+CONFIG_SHARERQ=1
 CONFIG_X86_LOCAL_APIC=y
 CONFIG_X86_IO_APIC=y
 CONFIG_X86_REROUTE_FOR_BROKEN_BOOT_IRQS=y
