--- a/linux-5.5rc/linux-bfq/PKGBUILD
+++ b/linux-5.5rc/linux-bfq/PKGBUILD
@@ -49,8 +49,8 @@ pkgbase=linux-bfq
 # pkgname=('linux-bfq' 'linux-bfq-headers' 'linux-bfq-docs')
 _major=5.5
 _major_rc=5.5-rc
-_tag=v5.5-rc5
 _minor=rc5
+_tag=v5.5-${_minor}
 pkgver=${_major}${_minor}
 _srcname=linux
 pkgrel=1
