--- a/linux-5.5rc/linux-bfq/PKGBUILD
+++ b/linux-5.5rc/linux-bfq/PKGBUILD
@@ -70,7 +70,7 @@ _bfq_patch="${_major}-${_bfq_path}-${_bfq_ver}-${_bfq_rel}.patch"
 _gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v5.5+.patch"
 
-source=("$_srcname::git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git#tag=$_tag"
+source=("git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git#tag=$_tag"
         "${_lucjanpath}/${_bfq_path}/${_bfq_patch}"
         "${_gcc_path}/${_gcc_patch}"
         "${_lucjanpath}/arch-patches/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
