--- a/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
@@ -53,7 +53,7 @@ _major=5.4
 _srcname=linux-${_major}
 _lqxpatchname=liquorix-package
 pkgbase=linux-lqx-git
-pkgver=5.4.1_1.r1326.g2c1ed90
+pkgver=5.4.10_1.r1358.g92f49e8
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -65,7 +65,7 @@ makedepends=('kmod' 'bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme
 
 source=("https://cdn.kernel.org/pub/linux/kernel/v5.x/${_srcname}.tar.xz"
         "https://cdn.kernel.org/pub/linux/kernel/v5.x/${_srcname}.tar.sign"
-        "git://github.com/damentz/${_lqxpatchname}")
+        "git://github.com/damentz/${_lqxpatchname}.git#branch=${_major}")
 
 export KBUILD_BUILD_HOST=archlinux
 export KBUILD_BUILD_USER=$pkgbase
