--- a/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
@@ -53,7 +53,7 @@ _major=5.4
 _srcname=linux-${_major}
 _lqxpatchname=liquorix-package
 pkgbase=linux-lqx-git
-pkgver=5.4.10_1.r1358.g92f49e8
+pkgver=5.4.10.1.r1358.g92f49e8
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -73,7 +73,7 @@ export KBUILD_BUILD_TIMESTAMP="$(date -Ru${SOURCE_DATE_EPOCH:+d @$SOURCE_DATE_EP
 
 pkgver() {
   cd $_lqxpatchname
-  _ver="${_major}.${_minor}_${_patchrel}"
+  _ver="${_major}.${_minor}.${_patchrel}"
   echo "${_ver}.r$(git rev-list --count HEAD).g$(git rev-parse --short HEAD)"
 }
 
