--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -46,9 +46,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.4
 _minor=10
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.4.10.lqx1.r0.g683f3ba183c3
+pkgver=5.4.10.lqx2.r0.g8942523a79cd
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -309,4 +309,4 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '3a7f2d8cd0eeaf52297ebc7757387e9c4cec293046684d0e3effb4091915cdf474291fc8962a09387ca888f5b9dfd5510a1f994cbbeb58f10699ed09304d8af7')
+            '0c36a57183462bd6fb38bf953042ebd749f836dad208659b0bb5a5a0cef405b5a4054c63d624e9b7dcc9909aa7508eef73d19bc4858976fef90ee37e8d026284')
