--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.4
-_minor=10
-_lqx=lqx2
+_minor=11
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.4.10.lqx2.r0.g8942523a79cd
+pkgver=5.4.11.lqx1.r0.g061aa995491c
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -309,4 +309,4 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '0c36a57183462bd6fb38bf953042ebd749f836dad208659b0bb5a5a0cef405b5a4054c63d624e9b7dcc9909aa7508eef73d19bc4858976fef90ee37e8d026284')
+            '29dc94c7677829ef3c42347e5124d8f30e051019769b5b71cc6b198c39cafedeafba209674b17894b0efbab5cad4e20bd19e9dbfc6bd59ed4640bfbba42dce02')
