--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.4
-_minor=11
-_lqx=lqx2
+_minor=12
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.4.11.lqx2.r0.g287e724dec58
+pkgver=5.4.12.lqx1.r0.g12b2a8a16853
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -309,4 +309,4 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '29dc94c7677829ef3c42347e5124d8f30e051019769b5b71cc6b198c39cafedeafba209674b17894b0efbab5cad4e20bd19e9dbfc6bd59ed4640bfbba42dce02')
+            '21b2a7719700ef88a02f92339c1c52606c7dad2735faacf29c1341543201712315eda23b12123fbe08bd529d562028bedd9c4407743386db17201f3471af8f35')
