--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -46,9 +46,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.4
 _minor=13
-_lqx=lqx3
+_lqx=lqx4
 _srcname=zen-kernel
-pkgver=5.4.13.lqx3.r0.gc10f09fa241e
+pkgver=5.4.13.lqx4.r0.g5157bbdb51dc
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -309,4 +309,4 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '6e77ab97aa73c10639b75f3961f245196854616db8c25c0dca21411cd992533e053525c2ba02dc5f72a48b4291477c9bc0dcbb50586168f46b0200dbbbae6660')
+            '31e6a3971376ba609234c990c1f3626dbb53263b2026d071be77ca74c00d6693a4c5b8e28c82297f921a1795f1bdd7295f4d21fdbb98ffecf65387574dccaa20')
