--- a/aur-rebased/linux-zen-git/PKGBUILD
+++ b/aur-rebased/linux-zen-git/PKGBUILD
@@ -46,7 +46,7 @@ pkgbase=linux-zen-git
 # pkgname=('linux-zen-git' 'linux-zen-git-headers' 'linux-zen-git-docs')
 _major=5.4
 _srcname=zen-kernel
-pkgver=5.4.13.r875291.g9c32dd770db4
+pkgver=5.4.14.r875535.gd54274bcd7fd
 pkgrel=1
 pkgdesc='Linux ZEN'
 arch=('x86_64')
@@ -308,4 +308,4 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '1b299e780ce1ac196a7ecc2139da4f09359a0e0b1a200fb3a2b863299b49513d85d7495e252bc3992807b1d2ce51d324125e647005dc576dd4299a2b7aa2de84')
+            'f4ebb6474ac8ee60dfda5ad96cf7a840beaa3367124a0d6a7c4d47827a9aedf0c96094a007ca025b30eb43b6b3a31f710d0e389a6b06be7835e8dfeec21f3e02')
